Add eager book extraction option and replace all string keys with symbols.

--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@
 /spec/reports/
 /tmp/
 /lib/bookshark/storage/html_publisher_pages/
-/lib/bookshark/logs/*
+/lib/bookshark/logs/*.log
 *.bundle
 *.so
 *.o
